--- a/README
+++ b/README
@@ -23,3 +23,7 @@
     ```
   - Method 2: long code automatically solve (see fast_wordle_solver.js)
 - Step 4. game over.
+
+## Handle
+
+[handle](https://handle.antfu.me/) answer alreay displayed in console!
